# diabetes-classifier

./: .gitignore  Data_Validation_Report.md  Makefile  README.md  brfss_metrics.json  pyproject.toml
.github/workflows/: CI.yml
diabetes_classifier/: __init__.py  dashboard.py  dataset.py  features.py  plots.py  validation.py
diabetes_classifier/modeling/: .gitignore  predict.py  train.py
notebooks/: 1.0-initial-data-exploration.ipynb  1.1-data-validation-audit.ipynb  2.0-data-cleaning-and-feature-eng.ipynb  3.0-exploratory-data-analysis.ipynb  4.0-model-development-and-evaluation.ipynb
reports/: Data_Validation_Report.md  brfss_default_metrics.json  brfss_pca_metrics.json  brfss_test_metrics.json  brfss_tuned_metrics.json  prediction_default_metrics.json  prediction_pca_metrics.json  prediction_test_metrics.json  prediction_tuned_metrics.json
tests/: test_dataset.py  test_features.py  test_validation.py
