[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "diabetes_classifier"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "ipython",
    "isort",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "scikit-learn",
    "tqdm",
    "typer",
    "seaborn (>=0.13.2,<0.14.0)",
    "great-expectations (>=1.15.1,<2.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["diabetes_classifier"]
force_sort_within_sections = true


